--- a/All about FE/React/[nomadcoders]ReactJS로 영화 웹 서비스 만들기/실습/index.html
+++ b/All about FE/React/[nomadcoders]ReactJS로 영화 웹 서비스 만들기/실습/index.html
@@ -11,12 +11,13 @@
     const root = document.getElementById("root");
     // JSX를 사용하는 이유: 실제 HTML과 비슷해서 훨씬 보기 편하다
     // Babel이 JSX를 브라우저가 이해할 수 있도록 JS로 번역해준다
-    const Title = (
+    const Title = () => (
       <h3 id="title" onMouseEnter={() => console.log("mouse enter")}>
         Hello I'm a title
       </h3>
     );
-    const Button = (
+    // 화살표 함수는 function 그리고 return과 같다.
+    const Button = () => (
       <button
         style={{
           backgroundColor: "tomato",
@@ -28,5 +29,10 @@
     );
     // 다음 시간에는 이 부분 코드를 바꿔볼 것
     // const container = React.createElement("div", null, [Title, Button])
-    ReactDOM.render(container, root);
+    const Container = (
+      <div>
+        <Title /><Button />  
+      </div>
+    );
+    ReactDOM.render(Container, root);
   </script>
