--- a/All about FE/React/[nomadcoders]ReactJS로 영화 웹 서비스 만들기/실습/index2.html
+++ b/All about FE/React/[nomadcoders]ReactJS로 영화 웹 서비스 만들기/실습/index2.html
@@ -9,13 +9,18 @@
   <script crossorigin src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     const root = document.getElementById("root");
+    let counter = 0;
+    function countUp() {
+      counter = counter + 1;
+      ReactDOM.render(<Container />, root);
+    }
     const Container = () => (
       <div>
-        <h3>Hello I'm a title</h3>
-        <button>Click me</button>
+        <h3>Total clicks: {counter}</h3>
+        <button onClick={countUp}>Click me</button>
       </div>
     )
 
-    ReactDOM.render(Container, root);
+    ReactDOM.render(<Container />, root);
   </script>
 </html>
